tree-sitter-lua/test/corpus/chunk.txt
================================================================================
chunk
================================================================================

--------------------------------------------------------------------------------

(chunk)

================================================================================
hash_bang_line
================================================================================

#!/usr/bin/env lua

--------------------------------------------------------------------------------

(chunk
  (hash_bang_line))

================================================================================
return_statement
================================================================================

return 42

--------------------------------------------------------------------------------

(chunk
  (return_statement
    (expression_list
      (number))))
